Simplify config + fix typo in readme